--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,12 +107,14 @@ body {
     opacity: 0;
     height: 0;
     transition: all .2s ease-in-out;
+    background-color: #dddddde8;
   }
 }
 
 .navbar__nav.active {
   padding: 20px 0;
   height: auto;
+  background-color: #dddddde8;
 }
 
 .navbar__nav.active .navbar__list {
